--- a/node-express/package.json
+++ b/node-express/package.json
@@ -12,10 +12,14 @@
   "license": "MIT",
   "devDependencies": {
     "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "mocha": "^7.1.1",
     "standard": "^14.3.3"
   },
   "peerDependencies": {
     "express": "4.x"
+  },
+  "dependencies": {
+    "ws": "^7.2.5"
   }
 }
